Revert check token url update

--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -10,4 +10,4 @@ webade-oauth2.authorize.url=https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/au
 wfim-rest.url=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
 siteminder.url.prefix=https://logontest7.gov.bc.ca/clp-cgi/logoff.cgi?returl=
 bcWildFireSupportPage=https://intranet.gov.bc.ca/bcws/provincial-programs/strategic-initiatives-and-innovation/wildfire-one/wildfire-one-training
-check.token.url=https://wfappsi.nrs.gov.bc.ca/pub/wfim/checkToken.jsp
+check.token.url=/checkToken.jsp
