Removed reverse proxy, added initial task-based liquibase deploy

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,12 +50,19 @@ jobs:
       DEFAULT_APPLICATION_ENVIRONMENT: wfnews
     secrets: inherit
 
-  reverse-proxy:
-    uses: ./.github/workflows/reverse-proxy.yml
+  liquibase-build:
+    uses: ./.github/workflows/liquibase.yml
     with:
-      REGISTRY: ghcr.io
       TARGET_ENV: dev
+      DB_PASS: ${{secrets.DEV_DB_PASS}}
     secrets: inherit
+
+  # reverse-proxy:
+  #   uses: ./.github/workflows/reverse-proxy.yml
+  #   with:
+  #     REGISTRY: ghcr.io
+  #     TARGET_ENV: dev
+  #   secrets: inherit
 
 #  trivy:
 #    # if: needs.check.outputs.build == 'true'
@@ -76,11 +83,4 @@ jobs:
       ALB_NAME: default
       VPC_NAME: Dev_vpc
       SUBNET_FILTER: App
-    secrets: inherit
-
-  liquibase-deploy:
-    uses: ./.github/workflows/liquibase.yml
-    needs: [terragrunt-deploy]
-    with:
-      TARGET_ENV: dev
     secrets: inherit
