Further parameterization of secrets

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -83,4 +83,7 @@ jobs:
       ALB_NAME: default
       VPC_NAME: Dev_vpc
       SUBNET_FILTER: App
-    secrets: inherit
+    secrets:
+      LICENSE_PLATE: ${{ secrets.LICENSE_PLATE }}
+      DB_PASS: ${{ secrets.DEV_DB_PASS }}
+      TFC_TEAM_TOKEN: ${{ secrets.TFC_TEAM_TOKEN }}
