--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -27,6 +27,17 @@ on:
       REGISTRY:
         type: string
         required: true
+    secrets:
+      LICENSE_PLATE:
+        type: string
+        required: true
+      DB_PASS:
+        type: string
+        required: true
+      TFC_TEAM_TOKEN:
+        type: string
+        required: true
+
 
 env:
   TF_VERSION: 1.2.2
