--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -55,6 +55,8 @@ jobs:
     with:
       REGISTRY: ghcr.io
       TARGET_ENV: dev
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   # reverse-proxy:
   #   uses: ./.github/workflows/reverse-proxy.yml
