--- a/docker/Dockerfile_liquibase
+++ b/docker/Dockerfile_liquibase
@@ -1,5 +1,9 @@
 FROM liquibase/liquibase
 ADD database /liquibase
-RUN echo -e '#!/bin/bash\nliquibase update --defaultsFile=/liquibase/liquibase.properties --url=$DB_URL --username=$DB_USER --password=$DB_PASS' > /liquibase/docker-entrypoint.sh
-
+EXPOSE 8080
+RUN apt-get update &&\
+  apt-get install -y nginx &&\
+  echo -e '#!/bin/bash\nliquibase update --defaultsFile=/liquibase/liquibase.properties --url=$DB_URL --username=$DB_USER --password=$DB_PASS' > /liquibase/docker-entrypoint.sh
+COPY docker/default.conf /etc/nginx/conf.d/default.conf
+RUN systemctl enable nginx && systemctl start nginx
 
