--- a/docker/Dockerfile_liquibase
+++ b/docker/Dockerfile_liquibase
@@ -1,6 +1,7 @@
 FROM liquibase/liquibase
 ADD database /liquibase
 EXPOSE 8080
+USER root
 RUN apt-get update &&\
   apt-get install -y nginx &&\
   echo -e '#!/bin/bash\nliquibase update --defaultsFile=/liquibase/liquibase.properties --url=$DB_URL --username=$DB_USER --password=$DB_PASS' > /liquibase/docker-entrypoint.sh
