--- a/server/wfnews-api-rest-endpoints/pom.xml
+++ b/server/wfnews-api-rest-endpoints/pom.xml
@@ -202,6 +202,13 @@
 			<artifactId>wfdm-document-management-api-rest-client</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.2</version>
+		</dependency>
+<!-- Thanks for using https://jar-download.com -->
+
 		
 	</dependencies>
 	<build>
