--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -38,6 +38,7 @@
     "@ngrx/router-store": "^13.1.0 ",
     "@ngrx/store": "^13.1.0 ",
     "@ngrx/store-devtools": "^13.1.0 ",
+    "@swimlane/ngx-charts": "20.1.0",
     "@qqnluaq/smk": "=1.0.16000",
     "@types/geojson": "7946.0.8",
     "@wf1/core-ui": "^2.4.5",
