--- a/client/wfnews-war/pom.xml
+++ b/client/wfnews-war/pom.xml
@@ -24,6 +24,11 @@
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
@@ -74,6 +79,16 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
+		</dependency>
+
+		<!-- Webade OAUTH2 -->
+		<dependency>
+			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
+			<artifactId>wfone-common-webade-oauth2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
+			<artifactId>wfone-common-webade-oauth2-test</artifactId>
 		</dependency>
 
 		<!-- apache io for webade pref compress/decompress -->
