--- a/client/pom.xml
+++ b/client/pom.xml
@@ -19,6 +19,18 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+		<!-- Webade OAUTH2 -->
+		<dependency>
+			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
+			<artifactId>wfone-common-webade-oauth2</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+	        <groupId>ca.bc.gov.nrs.wfone.common</groupId>
+	        <artifactId>wfone-common-webade-oauth2-test</artifactId>
+	        <version>1.3.0</version>
+      	</dependency>
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
