Add lightgallery, all fires stats demo

--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -76,7 +76,8 @@
     "tslib": "^2.0.0",
     "vanilla-text-mask": "^5.1.1",
     "video.js": "^7.15.4",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "lightgallery": "2.7.0-beta.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.8",
