--- a/database/liquibase.properties
+++ b/database/liquibase.properties
@@ -1,7 +1,7 @@
 #Liquibase.properties
 driver: org.postgresql.Driver
-schema : wfnews
-liquibase-schema-name :  wfnews
+schema : public
+liquibase-schema-name :  public
 logLevel: debug
 logFile: log\\liquibase.log
 
