--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -15,4 +15,4 @@ webade-oauth2.client.id=WFIM_INCIDENT_MANAGER_UI
 webade-oauth2.wfim-incident-manager-ui.client.secret=${webade-oauth2.wfim-incident-manager-ui.client.secret}
 webade-oauth2.check.token.v2.url=https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
 webade-oauth2.token.url=https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
-
+pointid.url=https://bcwsapi.nrs.gov.bc.ca/wfss-pointid-api
