Made db password environment specific

--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -15,6 +15,13 @@ on:
       TARGET_ENV:
         type: string
         required: true
+    secrets:
+      DB_PASS:
+        required: true
+      IDIR_AS_EMAIL:
+        required: true
+      IDIR_PASSWORD:
+        required: true
       
 
 
