--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -39,7 +39,10 @@ jobs:
     with:
       REGISTRY: ghcr.io
       TARGET_ENV: dev
-    secrets: inherit
+    secrets:
+      DB_PASS: ${{ secrets.DEV_DB_PASS }}
+      IDIR_AS_EMAIL: ${{ secrets.IDIR_AS_EMAIL }}
+      IDIR_PASSWORD: ${{ secrets.IDIR_PASSWORD }}
 
   liquibase-build:
     uses: ./.github/workflows/liquibase.yml
