update service worker path

--- a/client/wfnews-war/src/main/angular/angular.json
+++ b/client/wfnews-war/src/main/angular/angular.json
@@ -82,7 +82,7 @@
                 }
               ],
               "serviceWorker": true,
-              "ngswConfigPath": "src/ngsw-config.json"
+              "ngswConfigPath": "./ngsw-config.json"
             }
           },
           "defaultConfiguration": ""
