--- a/client/wfnews-war/src/main/resources/application.properties
+++ b/client/wfnews-war/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 application.version=${project.version}
 build.number=1
 project.acronym=WFNEWS
-openmaps.url=https://test.openmaps.gov.bc.ca/geo/pub/ows
+openmaps.url=https://openmaps.gov.bc.ca/geo/pub/ows
 openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
 drivebc.url=https://dev-maps.th.gov.bc.ca/geoV05/ows
 incidentsUri=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
