Added changes to support client, fixed typos

--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -13,7 +13,7 @@ on:
       REGISTRY:
       WEBADE-OAUTH2_TOKEN_CLIENT_URL:
       WEBADE-OAUTH2_TOKEN_URL:
-      WRDM_REST_URL:
+      WFDM_REST_URL:
       WFIM_CLIENT_URL:
       WFIM_CODE_TABLES_URL:
       WEBADE-OAUTH2_CHECK_TOKEN_URL:
@@ -80,7 +80,7 @@ jobs:
           SUBNET_FILTER: ${{ inputs.SUBNET_FILTER }}
           WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_CLIENT_URL}}
           WEBADE-OAUTH2_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_URL}}
-          WRDM_REST_URL: ${{inputs.WRDM_REST_URL}}
+          WFDM_REST_URL: ${{inputs.WFDM_REST_URL}}
           WFIM_CLIENT_URL: ${{inputs.WFIM_CLIENT_URL}}
           WFIM_CODE_TABLES_URL: ${{inputs.WFIM_CODE_TABLES_URL}}
           WEBADE-OAUTH2_CHECK_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_CHECK_TOKEN_URL}}
