--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -133,7 +133,7 @@ jobs:
           WFIM_CODE_TABLES_URL: ${{inputs.WFIM_CODE_TABLES_URL}}
           WEBADE-OAUTH2_CHECK_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_CHECK_TOKEN_URL}}
           WFONE_EMAIL_NOTIFICATIONS_ENABLED: ${{inputs.WFONE_EMAIL_NOTIFICATIONS_ENABLED}}
-          SMTP_HOST_NAME: ${{inputs.SMTP_HOST_NAME}
+          SMTP_HOST_NAME: ${{inputs.SMTP_HOST_NAME}}
           SMTP_FROM_EMAIL: ${{inputs.SMTP_FROM_EMAIL}}
           SMTP_ADMIN_EMAIL: ${{inputs.SMTP_ADMIN_EMAIL}}
           SMTP_EMAIL_SYNC_ERROR_FREQ: ${{inputs.SMTP_EMAIL_SYNC_ERROR_FREQ}}
