--- a/client/wfnews-war/src/main/webapp/WEB-INF/web.xml
+++ b/client/wfnews-war/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,11 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
+	<servlet-mapping>
+		<servlet-name>Webade Servlet</servlet-name>
+		<url-pattern>/checkToken/*</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
