--- a/server/wfnews-api-rest-endpoints/src/test/resources/test.properties
+++ b/server/wfnews-api-rest-endpoints/src/test/resources/test.properties
@@ -1,7 +1,7 @@
 
 #VIVID_DEV database
-wfone.datasource.url=#{wfone.datasource.url}
-wfone.datasource.username=#{wfone.datasource.username}
-wfone.datasource.password=#{wfone.datasource.password}
-wfone.datasource.max.connections=#{wfone.datasource.max.connections}
+wfone.datasource.url=#{WFNEWS_DB_URL}
+wfone.datasource.username=#{WFNEWS_DB_USERNAME}
+wfone.datasource.password=#{WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}
+wfone.datasource.max.connections=#{WFNEWS_DB_MAX_CONNECTIONS}
 wfnews-agol-query.url=https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/BCWS_ActiveFires_PublicView/FeatureServer/0/query?where=FIRE_STATUS+%3C%3E+'OUT'
