--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -46,6 +46,8 @@ env:
   WFNEWS_AGOL_QUERY_URL: "default"
   SMTP_PASSWORD: "default"
   WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: "default"
+  WFNEWS_USERNAME: "default"
+  WFNEWS_MAX_CONNECTIONS: 10
 
 jobs:
   plan:
@@ -93,6 +95,8 @@ jobs:
           WFNEWS_AGOL_QUERY_URL: ${{env.WFNEWS_AGOL_QUERY_URL}}
           SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
           WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}}
+          WFNEWS_USERNAME: ${{inputs.WFNEWS_USERNAME}}
+          WFNEWS_MAX_CONNECTIONS: ${{inputs.WFNEWS_MAX_CONNECTIONS}}
 
         run: terragrunt plan --terragrunt-non-interactive
 
