--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -95,8 +95,8 @@ jobs:
           WFNEWS_AGOL_QUERY_URL: ${{env.WFNEWS_AGOL_QUERY_URL}}
           SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
           WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}}
-          WFNEWS_USERNAME: ${{inputs.WFNEWS_USERNAME}}
-          WFNEWS_MAX_CONNECTIONS: ${{inputs.WFNEWS_MAX_CONNECTIONS}}
+          WFNEWS_USERNAME: ${{env.WFNEWS_USERNAME}}
+          WFNEWS_MAX_CONNECTIONS: ${{env.WFNEWS_MAX_CONNECTIONS}}
 
         run: terragrunt plan --terragrunt-non-interactive
 
