--- a/server/wfnews-persistence/pom.xml
+++ b/server/wfnews-persistence/pom.xml
@@ -50,6 +50,20 @@
             <groupId>ca.bc.gov.webade</groupId>
             <artifactId>webade-oauth2-common</artifactId>
             <version>1.6.3</version>
+            <exclusions>
+                <exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 		<dependency>
