--- a/server/wfnews-service-api/pom.xml
+++ b/server/wfnews-service-api/pom.xml
@@ -79,10 +79,6 @@
 			<groupId>ca.bc.gov.nrs.common</groupId>
 			<artifactId>nrs-common-persistence</artifactId>
 		</dependency>
-		<!--<dependency>
-			<groupId>ca.bc.gov.nrs.common</groupId>
-			<artifactId>nrs-common-code-endpoints</artifactId>
-		</dependency> -->
 		<dependency>
 				<groupId>ca.bc.gov.nrs.common</groupId>
 				<artifactId>nrs-common-rest-endpoints</artifactId>
@@ -98,6 +94,20 @@
             <groupId>ca.bc.gov.webade</groupId>
             <artifactId>webade-oauth2-common</artifactId>
             <version>1.6.3</version>
+            <exclusions>
+                <exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
 		
