--- a/client/wfnews-war/src/main/webapp/WEB-INF/web.xml
+++ b/client/wfnews-war/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 
 	<servlet-mapping>
 		<servlet-name>Webade Servlet</servlet-name>
-		<url-pattern>/checkToken/*</url-pattern>
+		<url-pattern>/auth/*</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
