--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -84,13 +84,13 @@ jobs:
       ALB_NAME: default
       VPC_NAME: Dev_vpc
       SUBNET_FILTER: App
-      WEBADE_OAUTH2_CLIENT_ID: WFIM_REST
-      WEBADE-OAUTH2_TOKEN_CLIENT_URL: https://i1api.nrs.gov.bc.ca/oauth2/v1/oauth/token?disableDeveloperFilter=true&grant_type=client_credentials
-      WEBADE-OAUTH2_TOKEN_URL: https://i1api.nrs.gov.bc.ca/oauth2/v1/oauth/token?disableDeveloperFilter=true
+      WEBADE_OAUTH2_CLIENT_ID: WFNEWS-UI
+      WEBADE-OAUTH2_TOKEN_CLIENT_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true&grant_type=client_credentials
+      WEBADE-OAUTH2_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
       WFDM_REST_URL: https://wfappsi.nrs.gov.bc.ca/int/wfdm-document-management-api/
       WFIM_CLIENT_URL: https://wfappsi.nrs.gov.bc.ca/int/wfim-incidents-api/
       WFIM_CODE_TABLES_URL: https://wfappsi.nrs.gov.bc.ca/int/wfim-incidents-api/codeTables
-      WEBADE-OAUTH2_CHECK_TOKEN_URL: https://i1api.nrs.gov.bc.ca/oauth2/v2/check_token?disableDeveloperFilter=true
+      WEBADE-OAUTH2_CHECK_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
       WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: true
       SMTP_HOST_NAME: apps.smtp.gov.bc.ca
       SMTP_FROM_EMAIL: noreply@gov.bc.ca
