--- a/client/wfnews-war/src/main/resources/application.properties
+++ b/client/wfnews-war/src/main/resources/application.properties
@@ -6,5 +6,5 @@ openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
 drivebc.url=https://dev-maps.th.gov.bc.ca/geoV05/ows
 siteminder.url.prefix=https://logontest7.gov.bc.ca/clp-cgi/logoff.cgi?returl=
 bcWildFireSupportPage=https://intranet.gov.bc.ca/bcws/provincial-programs/strategic-initiatives-and-innovation/wildfire-one/wildfire-one-training
-webade-oauth2.client.id=WFIM_INCIDENT_MANAGER_UI
+webade-oauth2.client.id=WFNEWS-UI
 pointid.url=https://bcwsapi.nrs.gov.bc.ca/wfss-pointid-api
