--- a/client/wfnews-war/src/main/webapp/WEB-INF/web.xml
+++ b/client/wfnews-war/src/main/webapp/WEB-INF/web.xml
@@ -57,10 +57,10 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>Check Token Servlet</servlet-name>
-		<url-pattern>/checkToken.jsp</url-pattern>
+		<servlet-name>Webade Servlet</servlet-name>
+		<url-pattern>/auth/*</url-pattern>
 	</servlet-mapping>
-  
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
