--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -19,6 +19,7 @@ on:
       - "docker/**"
       - "terraform/**"
       - "Dockerfile"
+      - "Dockerfile_client"
       - "!**/README.md"
 
 jobs:
