--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -28,6 +28,7 @@ env:
   ALB_NAME: "default"
   VPC_NAME: "Dev_vpc"
   SUBNET_FILTER: "App"
+  WEBADE_OAUTH2_AUTHORIZE_URL: "default"
   WEBADE_OAUTH2_CLIENT_ID: "default"
   WEBADE-OAUTH2_TOKEN_CLIENT_URL: "default"
   WEBADE-OAUTH2_TOKEN_URL: "default"
@@ -81,6 +82,7 @@ jobs:
           WEBADE_OAUTH2_CLIENT_ID: ${{env.WEBADE_OAUTH2_CLIENT_ID}}
           WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{env.WEBADE-OAUTH2_TOKEN_CLIENT_URL}}
           WEBADE-OAUTH2_TOKEN_URL: ${{env.WEBADE-OAUTH2_TOKEN_URL}}
+          WEBADE_OAUTH2_AUTHORIZE_URL: ${{env.WEBADE_OAUTH2_AUTHORIZE_URL}}
           WFDM_REST_URL: ${{env.WFDM_REST_URL}}
           WFIM_CLIENT_URL: ${{env.WFIM_CLIENT_URL}}
           WFIM_CODE_TABLES_URL: ${{env.WFIM_CODE_TABLES_URL}}
