--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -84,6 +84,9 @@ on:
       WEBADE_OAUTH2_CLIENT_ID:
         required: true
         type: string
+      WEBADE_OAUTH2_AUTHORIZE_URL:
+        required: true
+        type: string
 
     secrets:
       LICENSE_PLATE:
@@ -138,6 +141,7 @@ jobs:
           WEBADE_OAUTH2_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_CLIENT_ID}}
           WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_CLIENT_URL}}
           WEBADE-OAUTH2_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_URL}}
+          WEBADE_OAUTH2_AUTHORIZE_URL: ${{inputs.WEBADE_OAUTH2_AUTHORIZE_URL}}
           WFDM_REST_URL: ${{inputs.WFDM_REST_URL}}
           WFIM_CLIENT_URL: ${{inputs.WFIM_CLIENT_URL}}
           WFIM_CODE_TABLES_URL: ${{inputs.WFIM_CODE_TABLES_URL}}
