--- a/client/wfnews-war/pom.xml
+++ b/client/wfnews-war/pom.xml
@@ -132,6 +132,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
 				<configuration>
+				  <failOnMissingWebXml>false</failOnMissingWebXml>
 					<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
 					<webResources>
 					  <resource>
