--- a/client/wfnews-war/src/main/resources/application.properties
+++ b/client/wfnews-war/src/main/resources/application.properties
@@ -6,7 +6,7 @@ openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
 drivebc.url=https://dev-maps.th.gov.bc.ca/geoV05/ows
 siteminder.url.prefix=https://logontest7.gov.bc.ca/clp-cgi/logoff.cgi?returl=
 bcWildFireSupportPage=https://intranet.gov.bc.ca/bcws/provincial-programs/strategic-initiatives-and-innovation/wildfire-one/wildfire-one-training
-check.token.url=token.jsp
+check.token.url=checkToken
 webade-oauth2.client.id=WFNEWS-UI
 webade-oauth2.wfnews-incident-manager-ui.client.secret=secret-test
 webade-oauth2.check.token.v2.url=https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
