Update token service to use proper path, not relative

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -79,7 +79,7 @@
         "authScopes": "WFIM.* WFORG.* WFDM.*",
         "enableCheckToken": true,
         "#checkTokenUrl": "assets/data/checktoken-INCIDENT_COMMANDER.json",
-        "checkTokenUrl": "assets/data/checktoken-LULI.json"
+        "checkTokenUrl": "./assets/data/checktoken-LULI.json"
     },
 
     "mapServices": {
