--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -64,6 +64,7 @@
         "#incidents": "https://d1wfapi.vividsolutions.com/wfim-incidents-api",
         "incidents": "https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api",
         "newsLocal": "http://localhost:8080/wfnews-api-rest-endpoints-1.0.0-SNAPSHOT",
+        "wfnews": "https://wfnews-server.dev.bcwildfireservices.com",
         "#orgunit": "https://d1wfapi.vividsolutions.com/wforg-org-unit-api",
         "orgunit": "https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api",
         "#wfdm": "https://d1wfapi.vividsolutions.com/wfdm-document-management-api",
