--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -27,21 +27,21 @@ jobs:
 
       - name: Tag client image
         run: |
-          docker pull ${{ env.CLIENT_IMAGE_NAME }}:main
-          docker tag ${{ env.CLIENT_IMAGE_NAME }}:main ${{ env.CLIENT_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
-          docker push ${{ env.CLIENT_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:main
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
 
       - name: Tag server image
         run: |
-          docker pull ${{ env.SERVER_IMAGE_NAME }}:main
-          docker tag ${{ env.SERVER_IMAGE_NAME }}:main ${{ env.SERVER_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
-          docker push ${{ env.SERVER_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:main
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
 
       - name: Tag liquibase image
         run: |
-          docker pull ${{ env.LIQUIBASE_IMAGE_NAME }}:main
-          docker tag ${{ env.LIQUIBASE_IMAGE_NAME }}:main ${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
-          docker push ${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:main
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
 
   terragrunt-deploy-test:
     uses: ./.github/workflows/terragrunt-deploy.yml
