--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -44,43 +44,48 @@ jobs:
           docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
 
   terragrunt-deploy-test:
-    uses: ./.github/workflows/terragrunt-deploy.yml
-    needs: [tag-images]
-    with:
-      REGISTRY: ghcr.io
-      #Server and Image name get PR number as appropriate inside deploy step
-      CLIENT_IMAGE: nr-bcws-wfnews-client
-      SERVER_IMAGE: nr-bcws-wfnews-server
-      LIQUIBASE_IMAGE: nr-bcws-wfnews-liquibase
-      TARGET_ENV: test
-      ALB_NAME: Core-Pp93w9Test-2F70A1-alb
-      VPC_NAME: test_vpc
-      SUBNET_FILTER: App
-      WEBADE_OAUTH2_CLIENT_ID: WFNEWS-UI
-      WEBADE-OAUTH2_TOKEN_CLIENT_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true&grant_type=client_credentials
-      WEBADE-OAUTH2_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
-      WEBADE_OAUTH2_AUTHORIZE_URL: https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
-      WFDM_REST_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfdm-document-management-api/
-      WFIM_CLIENT_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/
-      WFIM_CODE_TABLES_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/codeTables
-      WEBADE-OAUTH2_CHECK_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
-      WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: true
-      SMTP_HOST_NAME: apps.smtp.gov.bc.ca
-      SMTP_FROM_EMAIL: noreply@gov.bc.ca
-      SMTP_ADMIN_EMAIL: fake@mail.ignoreme
-      SMTP_EMAIL_SYNC_ERROR_FREQ: 10
-      SMTP_EMAIL_FREQ: 10 
-      SMTP_EMAIL_ERROR_SUBJECT: WFNEWS API Error Subject [TEST]
-      SMTP_EMAIL_SUBJECT: WFNEWS API Error [TEST]
-      DEFAULT_APPLICATION_ENVIRONMENT: TEST
-      WFNEWS_AGOL_QUERY_URL: https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/BCWS_ActiveFires_PublicView/FeatureServer/0/query?where=
-      WFNEWS_USERNAME: wfnewstest
-      WFNEWS_MAX_CONNECTIONS: 10
-      IMAGE_TAG: ${GITHUB_REF#refs/tags/}
+    runs-on: ubuntu-22.04
+    steps:
+      - run: echo ::set-output name=tag-value::${GITHUB_REF#refs/tags/} 
+        id: get-release-tag
 
-    secrets:
-      LICENSE_PLATE: ${{ secrets.LICENSE_PLATE }}
-      DB_PASS: ${{ secrets.TEST_DB_PASS }}
-      TFC_TEAM_TOKEN: ${{ secrets.TFC_TEAM_TOKEN }}
-      SMTP_PASSWORD: ${{ secrets.TEST_SMTP_PASSWORD }}
-      WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.TEST_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}
+      - uses: ./.github/workflows/terragrunt-deploy.yml
+        needs: [tag-images]
+        with:
+          REGISTRY: ghcr.io
+          #Server and Image name get PR number as appropriate inside deploy step
+          CLIENT_IMAGE: nr-bcws-wfnews-client
+          SERVER_IMAGE: nr-bcws-wfnews-server
+          LIQUIBASE_IMAGE: nr-bcws-wfnews-liquibase
+          TARGET_ENV: test
+          ALB_NAME: Core-Pp93w9Test-2F70A1-alb
+          VPC_NAME: test_vpc
+          SUBNET_FILTER: App
+          WEBADE_OAUTH2_CLIENT_ID: WFNEWS-UI
+          WEBADE-OAUTH2_TOKEN_CLIENT_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true&grant_type=client_credentials
+          WEBADE-OAUTH2_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
+          WEBADE_OAUTH2_AUTHORIZE_URL: https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
+          WFDM_REST_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfdm-document-management-api/
+          WFIM_CLIENT_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/
+          WFIM_CODE_TABLES_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/codeTables
+          WEBADE-OAUTH2_CHECK_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
+          WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: true
+          SMTP_HOST_NAME: apps.smtp.gov.bc.ca
+          SMTP_FROM_EMAIL: noreply@gov.bc.ca
+          SMTP_ADMIN_EMAIL: fake@mail.ignoreme
+          SMTP_EMAIL_SYNC_ERROR_FREQ: 10
+          SMTP_EMAIL_FREQ: 10 
+          SMTP_EMAIL_ERROR_SUBJECT: WFNEWS API Error Subject [TEST]
+          SMTP_EMAIL_SUBJECT: WFNEWS API Error [TEST]
+          DEFAULT_APPLICATION_ENVIRONMENT: TEST
+          WFNEWS_AGOL_QUERY_URL: https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/BCWS_ActiveFires_PublicView/FeatureServer/0/query?where=
+          WFNEWS_USERNAME: wfnewstest
+          WFNEWS_MAX_CONNECTIONS: 10
+          IMAGE_TAG: ${{ steps.get-release-tag.outputs.tag-value }}
+
+        secrets:
+          LICENSE_PLATE: ${{ secrets.LICENSE_PLATE }}
+          DB_PASS: ${{ secrets.TEST_DB_PASS }}
+          TFC_TEAM_TOKEN: ${{ secrets.TFC_TEAM_TOKEN }}
+          SMTP_PASSWORD: ${{ secrets.TEST_SMTP_PASSWORD }}
+          WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.TEST_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}
