--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -10,11 +10,14 @@ env:
 on:
   release:
     types: [published]
-
+    
 jobs:
 
   tag-images:
     runs-on: ubuntu-22.04
+
+    outputs:
+      tag-value: ${{ steps.get-release-tag.outputs.tag-value }}
 
     steps:
       - uses: actions/checkout@v3
@@ -44,14 +47,15 @@ jobs:
           docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
           docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
 
-  terragrunt-deploy-test:
-    runs-on: ubuntu-22.04
-    steps:
       - run: echo ::set-output name=tag-value::${GITHUB_REF#refs/tags/} 
         id: get-release-tag
+      
 
+  terragrunt-deploy-test:
+    runs-on: ubuntu-22.04
+    needs: tag-images
+    steps:
       - uses: ./.github/workflows/terragrunt-deploy.yml
-        needs: [tag-images]
         with:
           REGISTRY: ghcr.io
           #Server and Image name get PR number as appropriate inside deploy step
@@ -82,8 +86,7 @@ jobs:
           WFNEWS_AGOL_QUERY_URL: https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/BCWS_ActiveFires_PublicView/FeatureServer/0/query?where=
           WFNEWS_USERNAME: wfnewstest
           WFNEWS_MAX_CONNECTIONS: 10
-          IMAGE_TAG: ${{ steps.get-release-tag.outputs.tag-value }}
-
+          IMAGE_TAG: ${{ needs.tag-images.outputs.tag-value }}
         secrets:
           LICENSE_PLATE: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.TEST_DB_PASS }}
