Fix mybatis type, primaryInd, dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,25 @@
-FROM tomcat:8.5.47-jdk8-openjdk
-ENV TOMCAT_MAJOR=8 \
-ENV JAVA_OPTS="$JAVA_OPTS -Djavax.net.debug=all" \
-TOMCAT_VERSION=8.5.47 \
-TOMCAT_HOME=/usr/local/tomcat \
-CATALINA_HOME=/usr/local/tomcat \
-CATALINA_OUT=/usr/local/tomcat/logs
-COPY /wfone-notifications-api-rest-endpoints/target/wfone-notifications-api-rest-endpoints-*.war /temp/
-RUN unzip /temp/wfone-notifications-api-rest-endpoints-*.war -d /usr/local/tomcat/webapps/wfone-notifications-api/
-RUN adduser --system tomcat
-RUN chown -R tomcat:0 `readlink -f ${CATALINA_HOME}` &&\
-chmod -R 770 `readlink -f ${CATALINA_HOME}` &&\
-chown -h tomcat:0 ${CATALINA_HOME}
+FROM tomcat:8.5.47-jdk11-openjdk
+
+COPY /wfnews-api-rest-endpoints/target/wfnews-api-rest-endpoints-1.0.0-SNAPSHOT.war .
+
+ENV TOMCAT_HOME=/usr/local/tomcat \
+  CATALINA_HOME=/usr/local/tomcat \
+  CATALINA_OUT=/usr/local/tomcat/logs \
+  TOMCAT_MAJOR=8 \
+  JAVA_OPTS="$JAVA_OPTS -Djavax.net.debug=all" 
+
+
+# TODO: REVERT CHOWN COMMAND TO 770 ONCE DONE TESTING
+RUN apt-get update &&\
+  apt-get install -y telnet &&\
+  apt-get install -y sed  &&\
+  rm -rf /usr/local/tomcat/webapps/ROOT  &&\
+  mkdir /usr/local/tomcat/webapps/ROOT &&\
+  unzip -d /usr/local/tomcat/webapps/ROOT/ '*.war' &&\
+  adduser --system tomcat &&\
+  chown -R tomcat:0 `readlink -f ${CATALINA_HOME}` &&\
+  chmod -R 770 `readlink -f ${CATALINA_HOME}` &&\
+  chown -h tomcat:0 ${CATALINA_HOME}
 
 # run as tomcat user
 USER tomcat
