--- a/server/wfnews-service-api/pom.xml
+++ b/server/wfnews-service-api/pom.xml
@@ -112,18 +112,18 @@
             <artifactId>unirest-java</artifactId>
             <version>1.4.9</version>
         </dependency>
-        
-        <dependency>
-		    <groupId>com.drewnoakes</groupId>
-		    <artifactId>metadata-extractor</artifactId>
-		    <version>2.18.0</version>
-		</dependency>
 		
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.6</version>
 		</dependency>
+
+		<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.1.0</version>
+			</dependency>
 
 		<dependency>
 			<groupId>ca.bc.gov.nrs.wfnews</groupId>
