--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -96,7 +96,8 @@
     "mapServices": {
         "#openmapsBaseUrl": "https://test.openmaps.gov.bc.ca/geo/pub/ows",
         "openmapsBaseUrl": "https://openmaps.gov.bc.ca/geo/pub/ows",
-        "drivebcBaseUrl": "https://dev-maps.th.gov.bc.ca/geoV05/ows"
+        "drivebcBaseUrl": "https://dev-maps.th.gov.bc.ca/geoV05/ows",
+        "wfnews": "http://localhost:1338"
     },
 
     "causeCodeConfig": {
