Add initial component, header

--- a/client/wfnews-war/src/main/angular/angular.json
+++ b/client/wfnews-war/src/main/angular/angular.json
@@ -43,7 +43,8 @@
               }
             ],
             "styles": [
-              "src/styles/main.scss"
+              "src/styles/main.scss",
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
               "node_modules/popper.js/dist/umd/popper.min.js",
