--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -47,9 +47,15 @@ jobs:
       REGISTRY: ghcr.io
     secrets: inherit
 
+  apisix-build:
+    uses: ./.github/workflows/apisix.yml
+    with:
+      REGISTRY: ghcr.io
+    secrets: inherit
+
   terragrunt-deploy-dev:
     uses: ./.github/workflows/terragrunt-deploy.yml
-    needs: [call-mvn-client, call-mvn-server, liquibase-build]
+    needs: [call-mvn-client, call-mvn-server, liquibase-build, apisix-build]
     with:
       REGISTRY: ghcr.io
       #Server and Image name get PR number as appropriate inside deploy step
