--- a/.github/workflows/apisix.yml
+++ b/.github/workflows/apisix.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 jobs:
-  run_liquibase:
+  build-apisix:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
