--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -12,6 +12,9 @@ on:
       LIQUIBASE_IMAGE:
         required: true
         type: string
+      APISIX_IMAGE:
+        required: true
+        type: string
       TARGET_ENV:
         required: true
         type: string
@@ -136,6 +139,7 @@ jobs:
           CLIENT_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.CLIENT_IMAGE }}:${{ inputs.IMAGE_TAG }}
           SERVER_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.SERVER_IMAGE }}:${{ inputs.IMAGE_TAG }}
           LIQUIBASE_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          APISIX_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.APISIX_IMAGE }}:${{ inputs.IMAGE_TAG }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
